// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ExecutionStatusLabel /> tests Aborted 1`] = `
<div>
  <div
    class="status aborted"
  >
    <span
      class="bp3-icon StyledProps--main icon"
      data-icon="circle-stop"
    >
      <svg
        fill="none"
        height="9"
        viewBox="0 0 10 10"
        width="9"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6.238 3.647H3.762a.107.107 0 00-.108.107v2.502c0 .06.048.108.108.108h2.476c.059 0 .107-.048.107-.108V3.754a.107.107 0 00-.107-.107z"
          fill="currentColor"
        />
        <path
          d="M5 .313a4.688 4.688 0 100 9.375A4.688 4.688 0 005 .312zm0 8.591a3.905 3.905 0 110-7.81 3.905 3.905 0 010 7.81z"
          fill="currentColor"
        />
      </svg>
    </span>
    <span>
      pipeline.executionStatus.Aborted
    </span>
  </div>
</div>
`;

exports[`<ExecutionStatusLabel /> tests ApprovalRejected 1`] = `
<div>
  <div
    class="status approvalrejected"
  >
    <span
      class="bp3-icon StyledProps--main icon"
      data-icon="x"
    >
      <svg
        fill="none"
        height="8"
        viewBox="0 0 10 10"
        width="8"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M.107.768l.66-.66c.144-.144.376-.144.5 0L5 3.82 8.714.107a.366.366 0 01.518 0l.66.66c.144.144.144.376 0 .5L6.162 5l3.732 3.714a.366.366 0 010 .518l-.66.66a.366.366 0 01-.519 0L5 6.162 1.268 9.893c-.125.143-.357.143-.5 0l-.66-.66a.366.366 0 010-.519L3.82 5 .107 1.268c-.143-.125-.143-.357 0-.5z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span>
      pipeline.executionStatus.ApprovalRejected
    </span>
  </div>
</div>
`;

exports[`<ExecutionStatusLabel /> tests ApprovalWaiting 1`] = `
<div>
  <div
    class="status approvalwaiting"
  >
    <span
      class="bp3-icon bp3-icon-time StyledProps--main icon"
      icon="time"
    >
      <svg
        data-icon="time"
        height="9"
        viewBox="0 0 16 16"
        width="9"
      >
        <desc>
          time
        </desc>
        <path
          d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6zm1-6.41V4c0-.55-.45-1-1-1s-1 .45-1 1v4c0 .28.11.53.29.71l2 2a1.003 1.003 0 001.42-1.42L9 7.59z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span>
      pipeline.executionStatus.Waiting
    </span>
  </div>
</div>
`;

exports[`<ExecutionStatusLabel /> tests AsyncWaiting 1`] = `
<div>
  <div
    class="status asyncwaiting"
  >
    <span
      class="bp3-icon StyledProps--main icon"
      data-icon="loading"
    >
      <svg
        height="10"
        viewBox="0 0 10 8"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          fill="currentColor"
          r="1"
          transform="translate(2 4)"
        >
          <animatetransform
            additive="sum"
            attributeName="transform"
            begin="0s"
            dur="1s"
            repeatCount="indefinite"
            type="scale"
            values="0; 1.25; 0"
          />
        </circle>
        <circle
          fill="currentColor"
          r="1"
          transform="translate(5 4)"
        >
          <animatetransform
            additive="sum"
            attributeName="transform"
            begin="0.2s"
            dur="1s"
            repeatCount="indefinite"
            type="scale"
            values="0; 1.25; 0"
          />
        </circle>
        <circle
          fill="currentColor"
          r="1"
          transform="translate(8 4)"
        >
          <animatetransform
            additive="sum"
            attributeName="transform"
            begin="0.4s"
            dur="1s"
            repeatCount="indefinite"
            type="scale"
            values="0; 1.25; 0"
          />
        </circle>
      </svg>
    </span>
    <span>
      pipeline.executionStatus.Running
    </span>
  </div>
</div>
`;

exports[`<ExecutionStatusLabel /> tests Discontinuing 1`] = `
<div>
  <div
    class="status discontinuing"
  >
    <span
      class="bp3-icon StyledProps--main icon"
      data-icon="circle-stop"
    >
      <svg
        fill="none"
        height="9"
        viewBox="0 0 10 10"
        width="9"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6.238 3.647H3.762a.107.107 0 00-.108.107v2.502c0 .06.048.108.108.108h2.476c.059 0 .107-.048.107-.108V3.754a.107.107 0 00-.107-.107z"
          fill="currentColor"
        />
        <path
          d="M5 .313a4.688 4.688 0 100 9.375A4.688 4.688 0 005 .312zm0 8.591a3.905 3.905 0 110-7.81 3.905 3.905 0 010 7.81z"
          fill="currentColor"
        />
      </svg>
    </span>
    <span>
      pipeline.executionStatus.Aborted
    </span>
  </div>
</div>
`;

exports[`<ExecutionStatusLabel /> tests Errored 1`] = `
<div>
  <div
    class="status errored"
  >
    <span
      class="bp3-icon bp3-icon-warning-sign StyledProps--main icon"
      icon="warning-sign"
    >
      <svg
        data-icon="warning-sign"
        height="9"
        viewBox="0 0 16 16"
        width="9"
      >
        <desc>
          warning-sign
        </desc>
        <path
          d="M15.84 13.5l.01-.01-7-12-.01.01c-.17-.3-.48-.5-.85-.5s-.67.2-.85.5l-.01-.01-7 12 .01.01c-.09.15-.15.31-.15.5 0 .55.45 1 1 1h14c.55 0 1-.45 1-1 0-.19-.06-.35-.15-.5zm-6.85-.51h-2v-2h2v2zm0-3h-2v-5h2v5z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span>
      pipeline.executionStatus.Failed
    </span>
  </div>
</div>
`;

exports[`<ExecutionStatusLabel /> tests Expired 1`] = `
<div>
  <div
    class="status expired"
  >
    <span
      class="bp3-icon StyledProps--main icon"
      data-icon="expired"
    >
      <svg
        fill="none"
        height="9"
        viewBox="0 0 10 10"
        width="9"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 4v4H9V4h1zM9 9v1h1V9H9zM8 7.645A3.995 3.995 0 015 9C2.795 9 1 7.205 1 5s1.795-4 4-4v4.5l3.775-3.775A4.983 4.983 0 005 0C2.24 0 0 2.24 0 5a5.002 5.002 0 008 4V7.645z"
          fill="currentColor"
        />
      </svg>
    </span>
    <span>
      pipeline.executionStatus.Expired
    </span>
  </div>
</div>
`;

exports[`<ExecutionStatusLabel /> tests Failed 1`] = `
<div>
  <div
    class="status failed"
  >
    <span
      class="bp3-icon bp3-icon-warning-sign StyledProps--main icon"
      icon="warning-sign"
    >
      <svg
        data-icon="warning-sign"
        height="9"
        viewBox="0 0 16 16"
        width="9"
      >
        <desc>
          warning-sign
        </desc>
        <path
          d="M15.84 13.5l.01-.01-7-12-.01.01c-.17-.3-.48-.5-.85-.5s-.67.2-.85.5l-.01-.01-7 12 .01.01c-.09.15-.15.31-.15.5 0 .55.45 1 1 1h14c.55 0 1-.45 1-1 0-.19-.06-.35-.15-.5zm-6.85-.51h-2v-2h2v2zm0-3h-2v-5h2v5z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span>
      pipeline.executionStatus.Failed
    </span>
  </div>
</div>
`;

exports[`<ExecutionStatusLabel /> tests IgnoreFailed 1`] = `
<div>
  <div
    class="status ignorefailed"
  >
    <span
      class="bp3-icon bp3-icon-tick-circle StyledProps--main icon"
      icon="tick-circle"
    >
      <svg
        data-icon="tick-circle"
        height="9"
        viewBox="0 0 16 16"
        width="9"
      >
        <desc>
          tick-circle
        </desc>
        <path
          d="M8 16c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm4-11c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span>
      pipeline.executionStatus.Success
    </span>
  </div>
</div>
`;

exports[`<ExecutionStatusLabel /> tests InterventionWaiting 1`] = `
<div>
  <div
    class="status interventionwaiting"
  >
    <span
      class="bp3-icon bp3-icon-time StyledProps--main icon"
      icon="time"
    >
      <svg
        data-icon="time"
        height="9"
        viewBox="0 0 16 16"
        width="9"
      >
        <desc>
          time
        </desc>
        <path
          d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6zm1-6.41V4c0-.55-.45-1-1-1s-1 .45-1 1v4c0 .28.11.53.29.71l2 2a1.003 1.003 0 001.42-1.42L9 7.59z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span>
      pipeline.executionStatus.Waiting
    </span>
  </div>
</div>
`;

exports[`<ExecutionStatusLabel /> tests NotStarted 1`] = `
<div>
  <div
    class="status notstarted"
  >
    <span
      class="bp3-icon StyledProps--main icon"
      data-icon="play-outline"
    >
      <svg
        fill="none"
        height="8"
        viewBox="0 0 9 10"
        width="8"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M.618 10c.108 0 .216-.03.309-.077l7.601-4.388a.623.623 0 00.31-.54.623.623 0 00-.31-.542L.927.081a.63.63 0 00-.618 0A.623.623 0 000 .621v8.776c0 .217.124.433.309.541.093.047.2.062.309.062zm.618-8.328l5.747 3.322-5.747 3.322V1.672z"
          fill="currentColor"
        />
      </svg>
    </span>
    <span>
      pipeline.executionStatus.NotStarted
    </span>
  </div>
</div>
`;

exports[`<ExecutionStatusLabel /> tests Paused 1`] = `
<div>
  <div
    class="status paused"
  >
    <span
      class="bp3-icon bp3-icon-pause StyledProps--main icon"
      icon="pause"
    >
      <svg
        data-icon="pause"
        height="12"
        viewBox="0 0 16 16"
        width="12"
      >
        <desc>
          pause
        </desc>
        <path
          d="M6 3H4c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1zm6 0h-2c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span>
      pipeline.executionStatus.Paused
    </span>
  </div>
</div>
`;

exports[`<ExecutionStatusLabel /> tests Pausing 1`] = `
<div>
  <div
    class="status pausing"
  >
    <span
      class="bp3-icon bp3-icon-pause StyledProps--main icon"
      icon="pause"
    >
      <svg
        data-icon="pause"
        height="12"
        viewBox="0 0 16 16"
        width="12"
      >
        <desc>
          pause
        </desc>
        <path
          d="M6 3H4c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1zm6 0h-2c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span>
      pipeline.executionStatus.Pausing
    </span>
  </div>
</div>
`;

exports[`<ExecutionStatusLabel /> tests Queued 1`] = `
<div>
  <div
    class="status queued"
  >
    <span
      class="bp3-icon StyledProps--main icon"
      data-icon="queued"
    >
      <svg
        height="10"
        viewBox="0 0 14 11"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M13.364 0H.636A.636.636 0 000 .636v3.819a.636.636 0 00.636.636h12.728A.636.636 0 0014 4.455V.636A.636.636 0 0013.364 0zm-.637 3.818H1.273V1.273h11.454v2.545zM13.364 6.363H.636a.636.636 0 000 1.273h12.728a.636.636 0 100-1.273zM13.364 8.91H.636a.636.636 0 100 1.273h12.728a.636.636 0 000-1.273z"
        />
      </svg>
    </span>
    <span>
      pipeline.executionStatus.Queued
    </span>
  </div>
</div>
`;

exports[`<ExecutionStatusLabel /> tests ResourceWaiting 1`] = `
<div>
  <div
    class="status resourcewaiting"
  >
    <span
      class="bp3-icon bp3-icon-time StyledProps--main icon"
      icon="time"
    >
      <svg
        data-icon="time"
        height="9"
        viewBox="0 0 16 16"
        width="9"
      >
        <desc>
          time
        </desc>
        <path
          d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6zm1-6.41V4c0-.55-.45-1-1-1s-1 .45-1 1v4c0 .28.11.53.29.71l2 2a1.003 1.003 0 001.42-1.42L9 7.59z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span>
      pipeline.executionStatus.Waiting
    </span>
  </div>
</div>
`;

exports[`<ExecutionStatusLabel /> tests Running 1`] = `
<div>
  <div
    class="status running"
  >
    <span
      class="bp3-icon StyledProps--main icon"
      data-icon="loading"
    >
      <svg
        height="10"
        viewBox="0 0 10 8"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          fill="currentColor"
          r="1"
          transform="translate(2 4)"
        >
          <animatetransform
            additive="sum"
            attributeName="transform"
            begin="0s"
            dur="1s"
            repeatCount="indefinite"
            type="scale"
            values="0; 1.25; 0"
          />
        </circle>
        <circle
          fill="currentColor"
          r="1"
          transform="translate(5 4)"
        >
          <animatetransform
            additive="sum"
            attributeName="transform"
            begin="0.2s"
            dur="1s"
            repeatCount="indefinite"
            type="scale"
            values="0; 1.25; 0"
          />
        </circle>
        <circle
          fill="currentColor"
          r="1"
          transform="translate(8 4)"
        >
          <animatetransform
            additive="sum"
            attributeName="transform"
            begin="0.4s"
            dur="1s"
            repeatCount="indefinite"
            type="scale"
            values="0; 1.25; 0"
          />
        </circle>
      </svg>
    </span>
    <span>
      pipeline.executionStatus.Running
    </span>
  </div>
</div>
`;

exports[`<ExecutionStatusLabel /> tests Skipped 1`] = `
<div>
  <div
    class="status skipped"
  >
    <span
      class="bp3-icon StyledProps--main icon"
      data-icon="skipped"
    >
      <svg
        height="8"
        viewBox="0 0 16 13"
        width="8"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.25 8.543H.746A.75.75 0 000 9.289v2.521a.75.75 0 00.746.746h2.521a.75.75 0 00.746-.746V9.29a.778.778 0 00-.763-.746zM15.236 8.543h-2.504a.75.75 0 00-.745.746v2.521a.75.75 0 00.745.746h2.522A.75.75 0 0016 11.81V9.29a.778.778 0 00-.764-.746zM9.252 8.543H6.73a.75.75 0 00-.746.746v2.521a.75.75 0 00.746.746h2.522a.75.75 0 00.746-.746V9.29c-.018-.409-.338-.746-.746-.746zm0 3.25H6.73V9.27h2.522v2.522zM14.65 6.713l.888-4.333-1.598.532A7.066 7.066 0 0011.65.923 7.612 7.612 0 007.99 0C4.013 0 .781 3.019.781 6.713c0 .301.249.55.55.55.303 0 .551-.249.551-.55 0-3.09 2.735-5.612 6.11-5.612 1.9 0 3.675.817 4.83 2.166l-1.492.515 3.32 2.93z"
        />
      </svg>
    </span>
    <span>
      pipeline.executionStatus.Skipped
    </span>
  </div>
</div>
`;

exports[`<ExecutionStatusLabel /> tests Success 1`] = `
<div>
  <div
    class="status success"
  >
    <span
      class="bp3-icon bp3-icon-tick-circle StyledProps--main icon"
      icon="tick-circle"
    >
      <svg
        data-icon="tick-circle"
        height="9"
        viewBox="0 0 16 16"
        width="9"
      >
        <desc>
          tick-circle
        </desc>
        <path
          d="M8 16c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm4-11c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span>
      pipeline.executionStatus.Success
    </span>
  </div>
</div>
`;

exports[`<ExecutionStatusLabel /> tests Suspended 1`] = `
<div>
  <div
    class="status suspended"
  >
    <span
      class="bp3-icon StyledProps--main icon"
      data-icon="banned"
    >
      <svg
        fill="none"
        height="9"
        viewBox="0 0 10 10"
        width="9"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.55 1.45C7.6.5 6.35 0 5 0 3.65 0 2.4.5 1.45 1.45-.5 3.4-.5 6.6 1.45 8.55 2.4 9.5 3.65 10 5 10c1.35 0 2.6-.5 3.55-1.45 1.95-1.95 1.95-5.15 0-7.1zm-6.4.7C2.95 1.4 3.95 1 5 1c.9 0 1.75.3 2.45.85l-5.6 5.6C.6 5.9.75 3.6 2.15 2.15zm5.7 5.7C7.05 8.6 6.05 9 5 9c-.9 0-1.75-.3-2.45-.85l5.6-5.6C8.7 3.25 9 4.1 9 5c0 1.05-.4 2.05-1.15 2.85z"
          fill="currentColor"
        />
      </svg>
    </span>
    <span>
      pipeline.executionStatus.Suspended
    </span>
  </div>
</div>
`;

exports[`<ExecutionStatusLabel /> tests TaskWaiting 1`] = `
<div>
  <div
    class="status taskwaiting"
  >
    <span
      class="bp3-icon StyledProps--main icon"
      data-icon="loading"
    >
      <svg
        height="10"
        viewBox="0 0 10 8"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          fill="currentColor"
          r="1"
          transform="translate(2 4)"
        >
          <animatetransform
            additive="sum"
            attributeName="transform"
            begin="0s"
            dur="1s"
            repeatCount="indefinite"
            type="scale"
            values="0; 1.25; 0"
          />
        </circle>
        <circle
          fill="currentColor"
          r="1"
          transform="translate(5 4)"
        >
          <animatetransform
            additive="sum"
            attributeName="transform"
            begin="0.2s"
            dur="1s"
            repeatCount="indefinite"
            type="scale"
            values="0; 1.25; 0"
          />
        </circle>
        <circle
          fill="currentColor"
          r="1"
          transform="translate(8 4)"
        >
          <animatetransform
            additive="sum"
            attributeName="transform"
            begin="0.4s"
            dur="1s"
            repeatCount="indefinite"
            type="scale"
            values="0; 1.25; 0"
          />
        </circle>
      </svg>
    </span>
    <span>
      pipeline.executionStatus.Running
    </span>
  </div>
</div>
`;

exports[`<ExecutionStatusLabel /> tests TimedWaiting 1`] = `
<div>
  <div
    class="status timedwaiting"
  >
    <span
      class="bp3-icon StyledProps--main icon"
      data-icon="loading"
    >
      <svg
        height="10"
        viewBox="0 0 10 8"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          fill="currentColor"
          r="1"
          transform="translate(2 4)"
        >
          <animatetransform
            additive="sum"
            attributeName="transform"
            begin="0s"
            dur="1s"
            repeatCount="indefinite"
            type="scale"
            values="0; 1.25; 0"
          />
        </circle>
        <circle
          fill="currentColor"
          r="1"
          transform="translate(5 4)"
        >
          <animatetransform
            additive="sum"
            attributeName="transform"
            begin="0.2s"
            dur="1s"
            repeatCount="indefinite"
            type="scale"
            values="0; 1.25; 0"
          />
        </circle>
        <circle
          fill="currentColor"
          r="1"
          transform="translate(8 4)"
        >
          <animatetransform
            additive="sum"
            attributeName="transform"
            begin="0.4s"
            dur="1s"
            repeatCount="indefinite"
            type="scale"
            values="0; 1.25; 0"
          />
        </circle>
      </svg>
    </span>
    <span>
      pipeline.executionStatus.Running
    </span>
  </div>
</div>
`;
